--- a/codings/Day_016/Day_016.ipynb
+++ b/codings/Day_016/Day_016.ipynb
@@ -107,6 +107,15 @@
     "\n",
     "turtle documentation: https://docs.python.org/3/library/turtle.html\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**pip install {packagename as per Pypi}**\n",
+    "\n",
+    "↑ To install a package"
+   ]
   }
  ],
  "metadata": {
