added and modified with Day_017

--- a/codings/Day_016/Day_016.ipynb
+++ b/codings/Day_016/Day_016.ipynb
@@ -116,6 +116,373 @@
     "\n",
     "↑ To install a package"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import turtle\n",
+    "\n",
+    "# paint = turtle.Turtle()\n",
+    "# Turtle is the class in the turtle package and\n",
+    "# The Class is always started using uppercase\n",
+    "# here \"paint\" the object. just like assigning variable to a function.\n",
+    "\n",
+    "# we can also use this code ↓\n",
+    "\n",
+    "from turtle import Turtle, Screen\n",
+    "paint = Turtle()\n",
+    "\n",
+    "print(paint)  #<- an seperate window will be opened with a arrow.\n",
+    "paint.shape(\"triangle\") # triangle shaped brush had been created.\n",
+    "paint.color('coral') # changes the colour of the pen\n",
+    "paint.forward(100) # creating a box\n",
+    "paint.right(90) # turning 90 degree right\n",
+    "paint.forward(100)\n",
+    "paint.right(90)\n",
+    "paint.forward(100)\n",
+    "paint.right(90)\n",
+    "paint.forward(100)\n",
+    "paint.right(90)\n",
+    "\n",
+    "my_screen = Screen()\n",
+    "print(my_screen.canvheight)\n",
+    "my_screen.exitonclick()   #exit the code when i am clicking on the screen\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a code which provides table in a ascii format\n",
+    "# using prettytable package\n",
+    "\n",
+    "# pretty table package is downloaded from the extension in pycharm\n",
+    "\n",
+    "from prettytable import PrettyTable\n",
+    "\n",
+    "table = PrettyTable()    # table as object, PrettyTable() as class\n",
+    "# print(table)   # printing an empty table\n",
+    "\n",
+    "'''output:\n",
+    "    ++\n",
+    "    ||\n",
+    "    ++\n",
+    "    ++\n",
+    "'''\n",
+    "\n",
+    "# refer the documentation of the package before using it from pypi website\n",
+    "\n",
+    "table.add_column(\"Name\",[\"hritick\",\"aswin\",\"karthi\"])\n",
+    "table.add_column(\"Reg_no\",[\"21BAD203\",\"21BAD204\",\"21BAD207\"])\n",
+    "\n",
+    "print(table)\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "output:\n",
+    "    +---------+----------+\n",
+    "    |   Name  |  Reg_no  |\n",
+    "    +---------+----------+\n",
+    "    | hritick | 21BAD203 |\n",
+    "    |  aswin  | 21BAD204 |\n",
+    "    |  karthi | 21BAD207 |\n",
+    "    +---------+----------+\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project of the day\n",
+    "\n",
+    "Coffee Machine using OOP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## menu.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "class MenuItem:\n",
+    "    \"\"\"Models each Menu Item.\"\"\"\n",
+    "    def __init__(self, name, water, milk, coffee, cost):\n",
+    "        self.name = name\n",
+    "        self.cost = cost\n",
+    "        self.ingredients = {\n",
+    "            \"water\": water,\n",
+    "            \"milk\": milk,\n",
+    "            \"coffee\": coffee\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "class Menu:\n",
+    "    \"\"\"Models the Menu with drinks.\"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.menu = [\n",
+    "            MenuItem(name=\"latte\", water=200, milk=150, coffee=24, cost=2.5),\n",
+    "            MenuItem(name=\"espresso\", water=50, milk=0, coffee=18, cost=1.5),\n",
+    "            MenuItem(name=\"cappuccino\", water=250, milk=50, coffee=24, cost=3),\n",
+    "        ]\n",
+    "\n",
+    "    def get_items(self):\n",
+    "        \"\"\"Returns all the names of the available menu items\"\"\"\n",
+    "        options = \"\"\n",
+    "        for item in self.menu:\n",
+    "            options += f\"{item.name}/\"\n",
+    "        return options\n",
+    "\n",
+    "    def find_drink(self, order_name):\n",
+    "        \"\"\"Searches the menu for a particular drink by name. Returns that item if it exists, otherwise returns None\"\"\"\n",
+    "        for item in self.menu:\n",
+    "            if item.name == order_name:\n",
+    "                return item\n",
+    "        print(\"Sorry that item is not available.\")\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## money_machine.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "class MoneyMachine:\n",
+    "\n",
+    "    CURRENCY = \"$\"\n",
+    "\n",
+    "    COIN_VALUES = {\n",
+    "        \"quarters\": 0.25,\n",
+    "        \"dimes\": 0.10,\n",
+    "        \"nickles\": 0.05,\n",
+    "        \"pennies\": 0.01\n",
+    "    }\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.profit = 0\n",
+    "        self.money_received = 0\n",
+    "\n",
+    "    def report(self):\n",
+    "        \"\"\"Prints the current profit\"\"\"\n",
+    "        print(f\"Money: {self.CURRENCY}{self.profit}\")\n",
+    "\n",
+    "    def process_coins(self):\n",
+    "        \"\"\"Returns the total calculated from coins inserted.\"\"\"\n",
+    "        print(\"Please insert coins.\")\n",
+    "        for coin in self.COIN_VALUES:\n",
+    "            self.money_received += int(input(f\"How many {coin}?: \")) * self.COIN_VALUES[coin]\n",
+    "        return self.money_received\n",
+    "\n",
+    "    def make_payment(self, cost):\n",
+    "        \"\"\"Returns True when payment is accepted, or False if insufficient.\"\"\"\n",
+    "        self.process_coins()\n",
+    "        if self.money_received >= cost:\n",
+    "            change = round(self.money_received - cost, 2)\n",
+    "            print(f\"Here is {self.CURRENCY}{change} in change.\")\n",
+    "            self.profit += cost\n",
+    "            self.money_received = 0\n",
+    "            return True\n",
+    "        else:\n",
+    "            print(\"Sorry that's not enough money. Money refunded.\")\n",
+    "            self.money_received = 0\n",
+    "            return False\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## coffee_maker.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "class CoffeeMaker:\n",
+    "    \"\"\"Models the machine that makes the coffee\"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.resources = {\n",
+    "            \"water\": 300,\n",
+    "            \"milk\": 200,\n",
+    "            \"coffee\": 100,\n",
+    "        }\n",
+    "\n",
+    "    def report(self):\n",
+    "        \"\"\"Prints a report of all resources.\"\"\"\n",
+    "        print(f\"Water: {self.resources['water']}ml\")\n",
+    "        print(f\"Milk: {self.resources['milk']}ml\")\n",
+    "        print(f\"Coffee: {self.resources['coffee']}g\")\n",
+    "\n",
+    "    def is_resource_sufficient(self, drink):\n",
+    "        \"\"\"Returns True when order can be made, False if ingredients are insufficient.\"\"\"\n",
+    "        can_make = True\n",
+    "        for item in drink.ingredients:\n",
+    "            if drink.ingredients[item] > self.resources[item]:\n",
+    "                print(f\"Sorry there is not enough {item}.\")\n",
+    "                can_make = False\n",
+    "        return can_make\n",
+    "\n",
+    "    def make_coffee(self, order):\n",
+    "        \"\"\"Deducts the required ingredients from the resources.\"\"\"\n",
+    "        for item in order.ingredients:\n",
+    "            self.resources[item] -= order.ingredients[item]\n",
+    "        print(f\"Here is your {order.name} ☕️. Enjoy!\")\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## main.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# same of Day_015 project\n",
+    "\n",
+    "# here you need to get hands on practice about classes and objects\n",
+    "\n",
+    "# menu.py, money.py , money_machine.py, coffee maker.py\n",
+    "# was provided\n",
+    "# in main.py, you can get hint about what are the classes we are going to use.\n",
+    "\n",
+    "# refer each py file to see what each class is doing.\n",
+    "\n",
+    "\n",
+    "# 1 -> Print report\n",
+    "# 2 -> is resources sufficient\n",
+    "# 3 -> Process coins\n",
+    "# 4 -> check transaction successfull\n",
+    "# 5 -> make coffee\n",
+    "\n",
+    "from menu import Menu, MenuItem\n",
+    "from coffee_maker import CoffeeMaker\n",
+    "from money_machine import MoneyMachine\n",
+    "\n",
+    "# 1 -> Print report\n",
+    "machine_money = MoneyMachine()\n",
+    "coffee_maker = CoffeeMaker()\n",
+    "menu = Menu()\n",
+    "is_on = True\n",
+    "# menu_item = MenuItem()\n",
+    "\n",
+    "while is_on:\n",
+    "    options = menu.get_items()\n",
+    "    selected_option = input(f\"What should you need from ({options}) ? :\")\n",
+    "    if selected_option == \"off\":\n",
+    "        is_on = False\n",
+    "    # 1 -> Print report\n",
+    "    elif selected_option == \"report\":\n",
+    "        coffee_maker.report()\n",
+    "        machine_money.report()\n",
+    "    # 2 -> is resources sufficient\n",
+    "    else:\n",
+    "        drink = menu.find_drink(selected_option)        # return object type\n",
+    "        if coffee_maker.is_resource_sufficient(drink):\n",
+    "            # 3 -> Process coins, # 4 -> check transaction successfull\n",
+    "            if machine_money.make_payment(drink.cost):\n",
+    "                # 5 -> make coffee\n",
+    "                coffee_maker.make_coffee(drink)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# print(menu.find_drink(\"latte\"))\n",
+    "# print(menu_item.name(\"latte\"))\n",
+    "# print(coffee_maker.is_resource_sufficient(\"latte\"))\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "output:\n",
+    "-------\n",
+    "\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :latte\n",
+    "Please insert coins.\n",
+    "How many quarters?: 10\n",
+    "How many dimes?: 0\n",
+    "How many nickles?: 0\n",
+    "How many pennies?: 0\n",
+    "Here is $0.0 in change.\n",
+    "Here is your latte ☕️. Enjoy!\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :report\n",
+    "Water: 100ml\n",
+    "Milk: 50ml\n",
+    "Coffee: 76g\n",
+    "Money: $2.5\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :cappuccino\n",
+    "Sorry there is not enough water.\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :espresso\n",
+    "Please insert coins.\n",
+    "How many quarters?: 15\n",
+    "How many dimes?: 0\n",
+    "How many nickles?: 0\n",
+    "How many pennies?: 0\n",
+    "Here is $2.25 in change.\n",
+    "Here is your espresso ☕️. Enjoy!\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :report\n",
+    "Water: 50ml\n",
+    "Milk: 50ml\n",
+    "Coffee: 58g\n",
+    "Money: $4.0\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :espresso\n",
+    "Please insert coins.\n",
+    "How many quarters?: 5 \n",
+    "How many dimes?: 0\n",
+    "How many nickles?: 00\n",
+    "How many pennies?: 0\n",
+    "Sorry that's not enough money. Money refunded.\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :espresso\n",
+    "Please insert coins.\n",
+    "How many quarters?: 10\n",
+    "How many dimes?: 0\n",
+    "How many nickles?: 0\n",
+    "How many pennies?: 0\n",
+    "Here is $1.0 in change.\n",
+    "Here is your espresso ☕️. Enjoy!\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :espresso\n",
+    "Sorry there is not enough water.\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :report\n",
+    "Water: 0ml\n",
+    "Milk: 50ml\n",
+    "Coffee: 40g\n",
+    "Money: $5.5\n",
+    "What should you need from (latte/espresso/cappuccino/) ? :off\n",
+    "'''\n"
+   ]
   }
  ],
  "metadata": {
